[package]
name = "gen_tree_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
hdf5 = "0.8.1"
indicatif = "0.17.0"
log = "0.4.17"
ndarray = "0.15.6"
num-traits = "0.2.15"
