[package]
name = "gen_tree_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
# hdf5 = "0.8.1"
hdf5 = { git = "https://github.com/mulimoen/hdf5-rust.git", branch = "bugfix/class_leak" }
indicatif = "0.17"
log = "0.4"
ndarray = "0.15"
num-traits = "0.2"
